Add Email Server Authentication & SSL Support
- New properties added to ping.properties file (mail.ssl -
mail.username - mail.password)
- Bin folder added to ignore list
- Constructor of PingMail refactored
- Send method altered

--- a/ping.properties.sample
+++ b/ping.properties.sample
@@ -6,6 +6,9 @@ check.module.cas.name=CAS
 # Mail server settings
 mail.server.host=smtp.example.com
 mail.server.port=25
+mail.ssl=false
+mail.username=
+mail.password=
 mail.from.address=noreply@example.com
 
 # Send notification to:
